hphp/test/zend/good/ext/curl/tests/curl_basic_007.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("curl")) print "skip";
}
