hphp/test/zend/bad/ext/curl/tests/curl_CURLOPT_READDATA.php.skipif
<?php if (!extension_loaded("curl") || false === getenv('PHP_CURL_HTTP_REMOTE_SERVER')) print "skip need PHP_CURL_HTTP_REMOTE_SERVER environment variable"; ?>